--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "manage",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,6 +11,7 @@
     "antd": "^5.21.6",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "echarts": "^5.5.1",
     "markdown-navbar": "^1.4.3",
     "mockjs": "^1.1.0",
     "react": "^18.3.1",
@@ -25,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": []
@@ -41,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
