--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "remark-gfm": "^4.0.0",
+    "three": "^0.170.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
